Closed Bug 369254 Opened 18 years ago Closed 18 years ago

Drag/drop of site icon to other browser icon in dock fails

Categories

(Camino Graveyard :: Drag & Drop, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: phiw2, Assigned: froodian)

Details

(Keywords: fixed1.8.1.3, regression)

Attachments

(1 file, 2 obsolete files)

Dragging (default) icon from location bar or tab to the Dock icon for other browser (any browser) fails to open page in target browser.
STR
1. load a web page (over http://)
2. drag site icon from location bar to dock icon of any other browser
3. watch nothing happening.

Dragging into open window works corectly. Dragging to desktop creates .webloc file correctly

Just in case:
user_pref("browser.chrome.favicons", false);

At one point I got this in Console log:
2007-02-04 20:39:36.467 Camino[19404] error in CoreDragDispose: -1850

Works: Version 2007020204 (1.2+)
Fails: Version 2007020222 (1.2+)
--> regression from bug 364198
I assume dragging only worked on 10.4 to begin with?  I can't repro successful dragging on 10.3.9 with builds from before that date.
You're right, that drag-and-drop to the Dock icon never seems to work on 10.3.
It definitely worked on 10.4, both on Trunk and Branch. Now it fails on both.
Confirming based on irc and targeting for 1.1 since it's a regression :(
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.1
Version: Trunk → unspecified
I wonder if this is maybe due to the 0-length file array case I was worried about.
Attached patch Patch (obsolete) — Splinter Review
Only advertises file type if we have files.
Assignee: nobody → stridey
Status: NEW → ASSIGNED
Attachment #254599 - Flags: review?(stuart.morgan)
Comment on attachment 254599 [details] [diff] [review]
Patch

We don't want to put *only* files on the pasteboard; what if the target only accepts strings, or URLs?
Attachment #254599 - Flags: review?(stuart.morgan) → review-
Attached patch Patch (obsolete) — Splinter Review
Oops, that declareTypes was supposed to be an addTypes.
Attachment #254599 - Attachment is obsolete: true
Attachment #254674 - Flags: review?(stuart.morgan)
Have you tested this with apps that accept URLs and files? Putting it at the end of the list may not do the right thing for those apps.
Attached patch PatchSplinter Review
This also doesn't publish the file ref version if the file doesn't exist at drag time.  AFACT, this doesn't make any difference behaviorally (even when the file doesn't exist), but it's the Right Thing to do.
Attachment #254674 - Attachment is obsolete: true
Attachment #254916 - Flags: review?(stuart.morgan)
Attachment #254674 - Flags: review?(stuart.morgan)
Comment on attachment 254916 [details] [diff] [review]
Patch

r=me
Attachment #254916 - Flags: superreview?(mark)
Attachment #254916 - Flags: review?(stuart.morgan)
Attachment #254916 - Flags: review+
Attachment #254916 - Flags: superreview?(mark) → superreview+
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.3
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: