Camino only - Bug 369254: Only publish file dragtype when there are files to drag. r=smorgan sr=mento